--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,4 @@
-DATABASE_URL=mysql2://acccounts:password@localhost:3306/acccounts?parseTime=true
+# for ridgepole
+DATABASE_URL=mysql2://accounts:password@127.0.0.1:3306/accounts?parseTime=true
+
+DATA_SOURCE_NAME=accounts:password@tcp(127.0.0.1:3306)/accounts?parseTime=true
