--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,5 @@
 DATABASE_URL=mysql2://accounts:password@127.0.0.1:3306/accounts?parseTime=true
 
 DATA_SOURCE_NAME=accounts:password@tcp(127.0.0.1:3306)/accounts?parseTime=true
+
+REDIS_ADDR=127.0.0.1:6379
