--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,1 @@
-DATABASE_URL=mysql2://acccounts:password@localhost:3306/acccounts?parseTime=true
+DATABASE_URL=mysql2://accounts:password@localhost:3306/accounts?parseTime=true
