build時に bundle install するようにした.

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,12 @@
 FROM ruby:2.5.1-alpine3.7
 LABEL maintainer="Ryota Egusa <gedorinku@yahoo.co.jp>"
 
-RUN apk --no-cache add build-base mysql-dev mysql-client
+WORKDIR /tmp
+COPY Gemfile Gemfile.lock ./
+
+RUN apk --no-cache add build-base mysql-dev mysql-client && \
+    bundle install -j2 && \
+    ridgepole --version
 
 WORKDIR /db
+ENTRYPOINT echo "（´・ω・｀）"
