--- a/sqlboiler.toml.sample
+++ b/sqlboiler.toml.sample
@@ -6,6 +6,6 @@ debug = false
   dbname  = "accounts"
   host    = "localhost"
   port    = 3306
-  user    = "accounts"
-  pass    = "password"
+  user    = "root"
+  pass    = ""
   sslmode = "false"
