--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 # for ridgepole
-DATABASE_URL=mysql2://root:@127.0.0.1:3306/accounts?parseTime=true
+DATABASE_URL=mysql2://root:password@127.0.0.1:3306/accounts?parseTime=true
 
-DATA_SOURCE_NAME=root:@tcp(127.0.0.1:3306)/accounts?parseTime=true
-REDIS_ADDR=127.0.0.1:6379
+DATA_SOURCE_NAME=root:password@tcp(mysql:3306)/accounts?parseTime=true
+REDIS_ADDR=redis:6379
 DEBUG_LOG=true
