--- a/sqlboiler.toml.sample
+++ b/sqlboiler.toml.sample
@@ -4,8 +4,8 @@ debug = false
 
 [mysql]
   dbname  = "accounts"
-  host    = "localhost"
+  host    = "mysql"
   port    = 3306
   user    = "root"
-  pass    = ""
+  pass    = "password"
   sslmode = "false"
