--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,9 +1,4 @@
-required = [
-  "github.com/golang/protobuf/protoc-gen-go",
-  "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway",
-  "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger",
-]
-
 [[constraint]]
   name = "github.com/izumin5210/grapi"
-  version = "v0.2.1"
+  version = "0.3.2"
+
