--- a/grapi.toml
+++ b/grapi.toml
@@ -1,22 +1,25 @@
+package = "programming_lab.prolab_accounts"
+
+[grapi]
+server_dir = "./app/server"
+
 [protoc]
 protos_dir = "./api/protos"
 out_dir = "./api"
 import_dirs = [
+  "./api/protos",
   "./vendor/github.com/grpc-ecosystem/grpc-gateway",
   "./vendor/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis",
 ]
 
   [[protoc.plugins]]
-  path = "./vendor/github.com/golang/protobuf/protoc-gen-go"
   name = "go"
-  args = { plugins = "grpc" }
+  args = { plugins = "grpc", paths = "source_relative" }
 
   [[protoc.plugins]]
-  path = "./vendor/github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway"
   name = "grpc-gateway"
-  args = { logtostderr = true }
+  args = { logtostderr = true, paths = "source_relative" }
 
   [[protoc.plugins]]
-  path = "./vendor/github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger"
   name = "swagger"
   args = { logtostderr = true }
