--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,52 @@ services:
     depends_on:
       - mysql
       - redis
+      - hydra
     ports:
       - "3000:3000"
+
+  hydra-migrate:
+    image: oryd/hydra:v1.0.0-rc.6_oryOS.10-alpine
+    depends_on:
+      - mysql
+    environment:
+#      - LOG_LEVEL=debug
+      - DATABASE_URL=${DATABASE_URL_HYDRA}
+    command:
+      migrate sql -e
+    restart: on-failure
+
+  hydra:
+    image: oryd/hydra:v1.0.0-rc.6_oryOS.10-alpine
+    depends_on:
+      - hydra-migrate
+    ports:
+      # Public port
+      - "4444:4444"
+      # Admin port
+      - "4445:4445"
+      # Port for hydra token user
+      - "5555:5555"
+    command:
+      serve all --dangerous-force-http
+    environment:
+#      - LOG_LEVEL=debug
+      - OAUTH2_ISSUER_URL=${OAUTH2_ISSUER_URL}
+      - OAUTH2_CONSENT_URL=${OAUTH2_CONSENT_URL}
+      - OAUTH2_LOGIN_URL=${OAUTH2_LOGIN_URL}
+      - DATABASE_URL=${DATABASE_URL_HYDRA}
+      - SYSTEM_SECRET=${HYDRA_SECRET}
+      - OAUTH2_SHARE_ERROR_DEBUG=1
+      - OIDC_SUBJECT_TYPES_SUPPORTED=public,pairwise
+      - OIDC_SUBJECT_TYPE_PAIRWISE_SALT=${HYDRA_SALT}
+#     - OAUTH2_ACCESS_TOKEN_STRATEGY=jwt
+#     Uncomment the following lines when configuring tracing
+#      - TRACING_PROVIDER=jaeger
+#      - TRACING_PROVIDER_JAEGER_SAMPLING_SERVER_URL=http://jaeger:5778/sampling
+#      - TRACING_PROVIDER_JAEGER_LOCAL_AGENT_ADDRESS=jaeger:6831
+#      - TRACING_PROVIDER_JAEGER_SAMPLING_TYPE=const
+#      - TRACING_PROVIDER_JAEGER_SAMPLING_VALUE=1
+    restart: unless-stopped
 
   mysql:
     image: mysql:5.7
