--- a/.env.sample
+++ b/.env.sample
@@ -7,8 +7,8 @@ DATABASE_URL_HYDRA=mysql://root:password@tcp(mysql:3306)/hydra?parseTime=true
 HYDRA_SECRET=youReallyNeedToChangeThis
 HYDRA_SALT=youReallyNeedToChangeThis
 OAUTH2_ISSUER_URL=http://localhost:4444
-OAUTH2_CONSENT_URL=http://localhost:3000/oauth/consent
-OAUTH2_LOGIN_URL=http://localhost:3000/oauth/login
+OAUTH2_CONSENT_URL=http://localhost:8080/oauth/consent
+OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 
 DATA_SOURCE_NAME=root:password@tcp(mysql:3306)/accounts?parseTime=true
 
@@ -16,4 +16,4 @@ REDIS_ADDR=redis:6379
 
 DEBUG_LOG=true
 
-HYDRA_ADMIN_URL=http://localhost:4445
+HYDRA_ADMIN_URL=http://hydra:4445
