--- a/db/Gemfile
+++ b/db/Gemfile
@@ -5,4 +5,4 @@ source "https://rubygems.org"
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 gem "ridgepole"
-gem "mysql2"
+gem "pg"
