--- a/.env.ci
+++ b/.env.ci
@@ -1,6 +1,15 @@
-# for ridgepole
-DATABASE_URL=mysql2://root:@127.0.0.1:3306/accounts?parseTime=true
+# for hydra
+DATABASE_URL_HYDRA=postgresql://postgres:@localhost/hydra?sslmode=disable
+HYDRA_SECRET=youReallyNeedToChangeThis
+HYDRA_SALT=youReallyNeedToChangeThis
+OAUTH2_ISSUER_URL=http://localhost:4444
+OAUTH2_CONSENT_URL=http://localhost:8080/oauth/consent
+OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 
-DATA_SOURCE_NAME=root:@tcp(127.0.0.1:3306)/accounts?parseTime=true
-REDIS_ADDR=127.0.0.1:6379
+DATABASE_URL=postgresql://postgres:@localhost/accounts?sslmode=disable
+
+REDIS_ADDR=localhost:6379
+
 DEBUG_LOG=true
+
+HYDRA_ADMIN_URL=http://hydra:4445
