--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,12 @@
 # for hydra
-DATABASE_URL_HYDRA=postgresql://postgres:@localhost/hydra?sslmode=disable
+DATABASE_URL_HYDRA=postgresql://postgres:@pg/hydra?sslmode=disable
 HYDRA_SECRET=youReallyNeedToChangeThis
 HYDRA_SALT=youReallyNeedToChangeThis
 OAUTH2_ISSUER_URL=http://localhost:4444
 OAUTH2_CONSENT_URL=http://localhost:8080/oauth/consent
 OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 
-DATABASE_URL=postgresql://postgres:@localhost/accounts?sslmode=disable
+DATABASE_URL=postgresql://postgres:@pg/accounts?sslmode=disable
 
 REDIS_ADDR=redis:6379
 
