--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,10 @@ OAUTH2_ISSUER_URL=http://localhost:4444
 OAUTH2_CONSENT_URL=http://localhost:8080/oauth/consent
 OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 
+# for ridgepole
+DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts?sslmode=disable
+
+# for app
 DATABASE_URL=postgresql://postgres:@pg/accounts?sslmode=disable
 
 REDIS_ADDR=redis:6379
