--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     volumes:
       - .:/db
     environment:
-      - DATABASE_URL=${DATABASE_URL}
+      - DATABASE_URL=${DATABASE_URL_RIDGEPOLE}
     network_mode: "host"
