--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,7 @@ DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts?sslmode=disable
 
 # for app
 DATABASE_URL=postgresql://postgres:@pg/accounts?sslmode=disable
+POSTGRES_PASSWORD=
 
 REDIS_ADDR=redis:6379
 
