Add minio service

--- a/.env.sample
+++ b/.env.sample
@@ -9,9 +9,16 @@ OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 # for ridgepole
 DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts?sslmode=disable
 
+# for minio
+MINIO_ACCESS_KEY=youReallyNeedToChangeThis
+MINIO_SECRET_KEY=youReallyNeedToChangeThis
+MINIO_BROWSER=off
+
 # for app
 DATABASE_URL=postgresql://postgres:@pg/accounts?sslmode=disable
 POSTGRES_PASSWORD=
+
+MINIO_BASE_URL=http://localhost:9100
 
 REDIS_ADDR=redis:6379
 
