--- a/.env.ci
+++ b/.env.ci
@@ -9,8 +9,15 @@ OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 # for ridgepole
 DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts?sslmode=disable
 
+# for minio
+MINIO_ACCESS_KEY=youReallyNeedToChangeThis
+MINIO_SECRET_KEY=youReallyNeedToChangeThis
+MINIO_BROWSER=off
+
 # for app
 DATABASE_URL=postgresql://postgres:@localhost/accounts?sslmode=disable
+
+MINIO_BASE_URL=http://localhost:9100
 
 REDIS_ADDR=localhost:6379
 
