--- a/.env.ci
+++ b/.env.ci
@@ -17,7 +17,9 @@ MINIO_BROWSER=off
 # for app
 DATABASE_URL=postgresql://postgres:@localhost/accounts?sslmode=disable
 
-MINIO_BASE_URL=http://localhost:9100
+MINIO_PUBLIC_URL=http://localhost:9100
+MINIO_ENDPOINT=minio:9000
+MINIO_BUCKET_NAME=public
 
 REDIS_ADDR=localhost:6379
 
