--- a/.env.sample
+++ b/.env.sample
@@ -18,7 +18,9 @@ MINIO_BROWSER=off
 DATABASE_URL=postgresql://postgres:@pg/accounts?sslmode=disable
 POSTGRES_PASSWORD=
 
-MINIO_BASE_URL=http://localhost:9100
+MINIO_PUBLIC_URL=http://localhost:9100
+MINIO_ENDPOINT=minio:9000
+MINIO_BUCKET_NAME=public
 
 REDIS_ADDR=redis:6379
 
