--- a/.env.ci
+++ b/.env.ci
@@ -8,6 +8,7 @@ OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 
 # for ridgepole
 DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts?sslmode=disable
+TEST_DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts_test?sslmode=disable
 
 # for minio
 MINIO_ACCESS_KEY=youReallyNeedToChangeThis
@@ -16,6 +17,7 @@ MINIO_BROWSER=off
 
 # for app
 DATABASE_URL=postgresql://postgres:@localhost/accounts?sslmode=disable
+TEST_DATABASE_URL=postgresql://postgres:@localhost/accounts_test?sslmode=disable
 
 MINIO_PUBLIC_URL=http://localhost:9100
 MINIO_ENDPOINT=minio:9000
