--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -7,4 +7,5 @@ services:
       - .:/db
     environment:
       - DATABASE_URL=${DATABASE_URL_RIDGEPOLE}
+      - TEST_DATABASE_URL=${TEST_DATABASE_URL_RIDGEPOLE}
     network_mode: "host"
