--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
 #   - timeout 30 docker-compose exec pg bash -c "until psql -c '\q' -U postgres; do sleep 0.5; done"
   - sleep 10
   - scripts/setup-db -y
+  - scripts/setup-test-db -y
   - go get -v -u github.com/golang/dep/cmd/dep
   - dep ensure -v -vendor-only
 
