--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -9,3 +9,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/mwitkow/go-proto-validators"
+
+[[constraint]]
+  name = "github.com/gobuffalo/packr"
+  version = "2.0.3"
