--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,14 @@ services:
       - hydra
     ports:
       - "127.0.0.1:3000:3000"
+  
+  ridgepole:
+    build: ./db
+    volumes:
+      - ./db:/db
+    environment:
+      - DATABASE_URL=${DATABASE_URL_RIDGEPOLE}
+      - TEST_DATABASE_URL=${TEST_DATABASE_URL_RIDGEPOLE}
 
   hydra-migrate:
     image: oryd/hydra:v1.0.0-rc.6_oryOS.10-alpine
