--- a/.env.sample
+++ b/.env.sample
@@ -7,8 +7,8 @@ OAUTH2_CONSENT_URL=http://localhost:8080/oauth/consent
 OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 
 # for ridgepole
-DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts?sslmode=disable
-TEST_DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts_test?sslmode=disable
+DATABASE_URL_RIDGEPOLE=postgresql://postgres:@pg/accounts?sslmode=disable
+TEST_DATABASE_URL_RIDGEPOLE=postgresql://postgres:@pg/accounts_test?sslmode=disable
 
 # for minio
 MINIO_ACCESS_KEY=youReallyNeedToChangeThis
