Impl email.Sender

--- a/.env.sample
+++ b/.env.sample
@@ -31,3 +31,8 @@ DEBUG_LOG=true
 JOB_INTERVAL_SEC=120
 
 HYDRA_ADMIN_URL=http://hydra:4445
+
+CLIENT_REGISTRATION_URL=http://localhost:8080/registration
+
+SMTP_ADDR=smtp:1025
+EMAIL_FROM=noreply@kurume-nct.com
