Impl github job

--- a/.env.ci
+++ b/.env.ci
@@ -35,3 +35,5 @@ CLIENT_REGISTRATION_URL=http://localhost:8080/registration
 
 SMTP_ADDR=smtp:1025
 EMAIL_FROM=noreply@kurume-nct.com
+
+GITHUB_ACCESS_TOKEN=yourAccessToken
