--- a/.env.ci
+++ b/.env.ci
@@ -32,6 +32,7 @@ JOB_INTERVAL_SEC=120
 HYDRA_ADMIN_URL=http://hydra:4445
 
 CLIENT_REGISTRATION_URL=http://localhost:8080/registration
+CLIENT_CONFIRMATION_URL=http://localhost:8080/confirmation
 
 SMTP_ADDR=smtp:1025
 EMAIL_FROM=noreply@kurume-nct.com
