--- a/.env.ci
+++ b/.env.ci
@@ -33,6 +33,7 @@ HYDRA_ADMIN_URL=http://hydra:4445
 
 CLIENT_REGISTRATION_URL=http://localhost:8080/registration
 CLIENT_CONFIRMATION_URL=http://localhost:8080/confirmation
+CLIENT_PASSWORD_RESET_URL=http://localhost:8080/password_resets
 
 SMTP_ADDR=smtp:1025
 EMAIL_FROM=noreply@kurume-nct.com
