--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,5 @@
 FROM ruby:2.6-alpine3.9
-LABEL maintainer="Ryota Egusa <gedorinku@yahoo.co.jp>"
+LABEL maintainer="Ryota Egusa <egusa.ryota@gmail.com>"
 
 WORKDIR /db
 COPY Gemfile Gemfile.lock ./
