--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - TEST_DATABASE_URL=${TEST_DATABASE_URL_RIDGEPOLE}
 
   hydra-migrate:
-    image: oryd/hydra:v1.0.0-rc.6_oryOS.10-alpine
+    image: oryd/hydra:v1.0.0-rc.10
     depends_on:
       - pg
     environment:
@@ -36,7 +36,7 @@ services:
     restart: on-failure
 
   hydra:
-    image: oryd/hydra:v1.0.0-rc.6_oryOS.10-alpine
+    image: oryd/hydra:v1.0.0-rc.10
     depends_on:
       - hydra-migrate
     ports:
