--- a/grapi.toml
+++ b/grapi.toml
@@ -8,9 +8,9 @@ protos_dir = "./api/protos"
 out_dir = "./api"
 import_dirs = [
   "./api/protos",
-  '{{ module "github.com/grpc-ecosystem/grpc-gateway" }}',
-  '{{ module "github.com/grpc-ecosystem/grpc-gateway" }}/third_party/googleapis',
-  '{{ module "github.com/mwitkow/go-proto-validators" }}',
+  "./vendor/github.com/grpc-ecosystem/grpc-gateway",
+  "./vendor/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis",
+  "./vendor",
 ]
 
   [[protoc.plugins]]
