--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,7 @@ HYDRA_SALT=youReallyNeedToChangeThis
 OAUTH2_ISSUER_URL=http://localhost:4444
 OAUTH2_CONSENT_URL=http://localhost:8080/oauth/consent
 OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
+CORS_ALLOWED_ORIGINS=http://127.0.0.1:*,http://localhost:*,https://*.prolab.club,https://prolab.club
 
 # for ridgepole
 DATABASE_URL_RIDGEPOLE=postgresql://postgres:@pg/accounts?sslmode=disable
