--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,13 +58,8 @@ services:
       - OAUTH2_SHARE_ERROR_DEBUG=1
       - OIDC_SUBJECT_TYPES_SUPPORTED=public,pairwise
       - OIDC_SUBJECT_TYPE_PAIRWISE_SALT=${HYDRA_SALT}
-#     - OAUTH2_ACCESS_TOKEN_STRATEGY=jwt
-#     Uncomment the following lines when configuring tracing
-#      - TRACING_PROVIDER=jaeger
-#      - TRACING_PROVIDER_JAEGER_SAMPLING_SERVER_URL=http://jaeger:5778/sampling
-#      - TRACING_PROVIDER_JAEGER_LOCAL_AGENT_ADDRESS=jaeger:6831
-#      - TRACING_PROVIDER_JAEGER_SAMPLING_TYPE=const
-#      - TRACING_PROVIDER_JAEGER_SAMPLING_VALUE=1
+      - CORS_ENABLED=true
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
     restart: unless-stopped
 
   pg:
