--- a/.env.ci
+++ b/.env.ci
@@ -8,8 +8,8 @@ OAUTH2_LOGIN_URL=http://localhost:8080/oauth/login
 CORS_ALLOWED_ORIGINS=http://127.0.0.1:*,http://localhost:*,https://*.prolab.club,https://prolab.club
 
 # for ridgepole
-DATABASE_URL_RIDGEPOLE=postgresql://postgres:@pg/accounts?sslmode=disable
-TEST_DATABASE_URL_RIDGEPOLE=postgresql://postgres:@pg/accounts_test?sslmode=disable
+DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts?sslmode=disable
+TEST_DATABASE_URL_RIDGEPOLE=postgresql://postgres:@localhost/accounts_test?sslmode=disable
 
 # for minio
 MINIO_ACCESS_KEY=youReallyNeedToChangeThis
